AutoarCompressor, AutoarExtractor: remove redundant declaration

The type getters were mistakenly redeclared in the header files.

https://bugzilla.gnome.org/show_bug.cgi?id=770437